fix: add MAVEN_OPTS to handle java module system with cglib